# MLOps

./: README.md  mlflow.db  mlflow.ipynb  pyproject.toml  requirements.txt
.airflow/: airflow.cfg  airflow.db
01_initial_ml_build/: initial_build.ipynb  modified_build_v2.ipynb
01_initial_ml_build/archive/: modified_build_v1.ipynb
02_orchestrator/: compare_models.py  dataset_build.py  pipeline.py  predict.py  preprocessor.py  train.py
02_orchestrator/dags/: airflow_dag.py
02_orchestrator/models/candidate/: metadata.json  model.joblib
03_deployment/: evaluate.py  feature_engineering.py  pipeline.py  predict.py  train.py
03_deployment/dags/: airflow_dag.py
mlflow/: mlflow.ipynb
mlflow/1/0376bba41b06412ab04edcb094b561b1/artifacts/: alpha_search_results.json  model_build_spec.json
mlflow/1/models/m-3e85d1605390472ba4d64c78d94efec2/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlflow/1/models/m-99742592463a41b6b2ee6ab3e7711e08/artifacts/: MLmodel  conda.yaml  (+1 more)
mlflow/db/: mlflow.db
mlruns/1/3c3fac89c94c4392abf869761da1f72a/artifacts/: selected_features.json
mlruns/1/62052b8b93c04f059958a2798fb34613/artifacts/: selected_features.json
mlruns/1/7b3028dfb6cd4ab0a5244648eb8d6eb2/artifacts/: selected_features.json
mlruns/1/9d6dcb0f97f944f8953587b01264d6b3/artifacts/: selected_features.json
mlruns/1/c486a970dc4e4c4dac3ce9ae16d787ef/artifacts/: selected_features.json
orchestrator/: compare_models.py  mlflow.db  model_build_spec.json  model_bundle.pkl  modiefied_build copy.ipynb  modified_build.ipynb  training_pipeline.py
(+48 files in other folders)
