[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "category-encoders>=2.9.0",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.0",
    "mlflow>=3.11.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ydata-profiling>=4.18.4",
]
